--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@react-three/fiber": "^9.4.2",
     "@xyflow/react": "^12.10.0",
     "ai": "^5.0.112",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +41,7 @@
     "shiki": "^3.19.0",
     "streamdown": "^1.6.10",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0",
     "tokenlens": "^1.3.1",
     "use-stick-to-bottom": "^1.1.1"
   },
@@ -48,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "tailwindcss": "^4",
