--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # In production, omit this or set to "false" to require users to provide their own keys
 NEXT_PUBLIC_DEV_MODE=true
 
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_OR_ANON_KEY=your_supabase_publishable_or_anon_key_here
+
 # AI Provider API Keys (used when DEV_MODE is true)
 OPENAI_API_KEY=your_openai_api_key_here
 GOOGLE_GENERATIVE_AI_API_KEY=your_google_api_key_here
