--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/react": "^2.0.109",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -27,6 +28,8 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@react-three/fiber": "^9.4.2",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@xyflow/react": "^12.10.0",
     "ai": "^5.0.112",
     "class-variance-authority": "^0.7.1",
